[package]
name = "qrcode-generator-api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5" }
http-body-util = "0.1.2"
hyper = "1.4.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
image = "0.25.2"
qrcode = "0.14.1"